--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.4.1"
+  },
+  "dependencies": {
+    "querystring": "^0.2.0",
+    "request": "^2.81.0"
   }
 }
